# shape4D

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Inner.cmake  README.md  SuperBuild.cmake  shape4D.cmake  shape4D.cxx  shape4D.xml
CMake/: FindFFTW.cmake
SuperBuild/: External_FFTW.cmake
Utilities/: README
include/: abstractkernel.h  adaptivegradientdescent.h  algorithm.h  array1d.h  array2d.h  array3d.h  exactkernel.h  grid.h  gridoptimize.h  helper.h  landmarks.h  multiobjectcomplex.h  optimizer.h  polydatareader.h  polydatawriter.h  regression.h  regressionacceleration.h  regressionparams.h  regressionvelocity.h  runexperiment.h  saveshapesandvectors.h  shape4Dconfig.h.in  shape4dstate.h  shapeobject.h  surfacecurrent.h  targetdata.h  tmplandmark.h  tmpsurfacecurrent.h  vtkpolydatareader.h  vtkpolydatawriter.h
src/: adaptivegradientdescent.cpp  array1d.txx  array2d.txx  array3d.txx  grid.cpp  gridoptimize.cpp  helper.cpp  landmarks.cpp  main.cpp  multiobjectcomplex.cpp  polydatareader.cpp  polydatawriter.cpp  regression.cpp  regressionacceleration.cpp  regressionparams.cpp  regressionvelocity.cpp  runexperiment.cpp  saveshapesandvectors.cpp  shape4dstate.cpp  shapeobject.cpp  surfacecurrent.cpp  targetdata.cpp  tinyxmlparser.cpp  tmplandmark.cpp  tmpsurfacecurrent.cpp  vtkpolydatareader.cpp  vtkpolydatawriter.cpp
testing/: CMakeLists.txt
